# PureTorch

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  MIGRATIONGUIDE.md  README.md  pyproject.toml  setup.py
PureTorch/: Tensor.py  __init__.py  activations.py  layers.py  loss.py
PureTorch/PureTorch.egg-info/: PKG-INFO
PureTorch/nn/: Linear.py  Perceptron.py  Sequential.py  __init__.py
PureTorch/optim/: SGD.py  __init__.py  optimizer.py
autograd/: __init__.py  context.py  function.py  grad_mode.py  ops.py  tensor.py  variable.py
puretorch/: Tensor.py  __init__.py  tensor.py
puretorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
puretorch/PureTorch.egg-info/: SOURCES.txt
puretorch/nn/: Linear.py  Sequential.py  __init__.py  functional.py  linear.py  module.py  parameter.py  relu.py  sequential.py  softmax.py  tanh.py  utils.py
puretorch/optim/: SGD.py  __init__.py  optimizer.py
puretorch/utils/: tensor_utils.py  viz.py
puretorchinfo/: summary.py
tests/: autograd_tests.py  tensor_tests.py
utils/: __init__.py  viz.py
