[build-system]
requires = ["setuptools>=42", "wheel", "numpy>=1.26.0,<2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PureTorch"
version = "0.1.2"
description = "A PyTorch-like library built from scratch"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dhruv N", email = "dhruvn853@gmail.com"}
]
requires-python = ">=3.9,<3.12"
keywords = ["deep learning", "neural networks", "machine learning", "pytorch", "numpy"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.urls]
Source = "https://github.com/Dristro/PureTorch"
Dev-Branch = "https://github.com/Dristro/PureTorch/tree/dev"
Report-Issues = "https://github.com/Dristro/PureTorch/issues"

[tool.setuptools.packages.find]
where = ["PureTorch"]
exclude = ["tests"]

[tool.setuptools]
include-package-data = true
